Fix: better alignment, and fix for firefox

--- a/src/app/event/event.component.scss
+++ b/src/app/event/event.component.scss
@@ -1,13 +1,10 @@
 .dot {
   position: absolute;
   top: 22px;
-  //left: 204px;
-  //left: 200px;
-  left: 198.2px;
+  left: 199px;
   width: 20px;
   height: 20px;
   border-radius: 100%;
-  //background-color: #494949;
 }
 
 .first .dot:not(.old .dot):before {
@@ -21,7 +18,6 @@
   left: 50%;
   -webkit-animation: pulse-border 1.5s ease-out infinite;
   animation: pulse-border 1.5s ease-out infinite;
-  //background: #494949;
   content: "";
   z-index: 2;
 }
@@ -46,20 +42,19 @@
   top: 43.5px;
   left: 207px;
   width: 3px;
-  //background: #000;
   height: calc(100% - 23px);
 }
 
 .row {
   position: relative;
-  width: 243px;
-  padding: 25px 0 25px 215px;
+  width: 237px;
+  padding: 26px 0 24px 179px;
   margin: 0 auto;
 }
 
 .date {
   position: absolute;
-  right: 195px;
+  right: 186px;
   width: 290px;
   top: 25px;
 }
@@ -72,17 +67,16 @@
   position: relative;
   transition: 0.4s;
   z-index: 2;
-  left: 30px;
+  left: 61px;
 }
 
 .old:not(.new) .subject {
   //background: #f1f1f1;
 }
 
-//body {
-//  font-family: sans-serif;
-//  line-height: 130%;
-//}
+ul {
+  padding-inline-start: unset; //remove default ul padding
+}
 
 b {
   font-weight: bold;
@@ -98,7 +92,8 @@ a:hover {
 .no-event {
   padding-top: 10rem;
   color: darkgray;
-  justify-self: center;
+  justify-self: center; // this doesn't work in firefox apparently
+  text-align: center;
   padding-inline-end: 40px; // to componsate for the ul shift
 }
 #wrapper {
