--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,26 +1,26 @@
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
-@use '@angular/material' as mat;
-
+@use "@angular/material" as mat;
 
 $fkn-m3-mono: (
   0: #000000,
-  10: #1A1C1C,
-  20: #2F3131,
-  25: #3A3C3C,
+  10: #1a1c1c,
+  20: #2f3131,
+  25: #3a3c3c,
   30: #454747,
   35: #515353,
-  40: #5D5F5F,
+  40: #5d5f5f,
   50: #767777,
   60: #909191,
-  70: #AAABAB,
-  80: #C6C6C7,
-  90: #E2E2E2,
-  95: #F0F1F1,
-  98: #F9F9F9,
-  99: #FCFCFC,
-  100:#FFFFFF,
-  secondary: (0: #000000,
+  70: #aaabab,
+  80: #c6c6c7,
+  90: #e2e2e2,
+  95: #f0f1f1,
+  98: #f9f9f9,
+  99: #fcfcfc,
+  100: #ffffff,
+  secondary: (
+    0: #000000,
     10: #131c2b,
     20: #283041,
     25: #333c4d,
@@ -37,7 +37,8 @@ $fkn-m3-mono: (
     99: #fdfbff,
     100: #ffffff,
   ),
-  neutral: (0: #000000,
+  neutral: (
+    0: #000000,
     10: #1a1b1f,
     20: #2f3033,
     25: #3b3b3f,
@@ -64,7 +65,8 @@ $fkn-m3-mono: (
     94: #efedf1,
     96: #f5f3f7,
   ),
-  neutral-variant: (0: #000000,
+  neutral-variant: (
+    0: #000000,
     10: #181c22,
     20: #2d3038,
     25: #383b43,
@@ -81,7 +83,8 @@ $fkn-m3-mono: (
     99: #fdfbff,
     100: #ffffff,
   ),
-  error: (0: #000000,
+  error: (
+    0: #000000,
     10: #410002,
     20: #690005,
     25: #7e0007,
@@ -104,20 +107,30 @@ $fkn-m3-mono: (
 @include mat.app-background();
 
 // Light theme
-$light-theme: mat.define-theme((color: (theme-type: light,
-        primary: $fkn-m3-mono,
-        tertiary: $fkn-m3-mono,
-      ),
-      density: (scale: 0,
-      )));
-$dark-theme: mat.define-theme((color: (theme-type: dark,
-        // predefined palettes from material website (top right theme option)
-        // primary: mat.$magenta-palette,
-        // tertiary: mat.$violet-palette,
-        primary: $fkn-m3-mono,
-        tertiary: $fkn-m3-mono,
-      ),
-    ));
+$light-theme: mat.define-theme(
+  (
+    color: (
+      theme-type: light,
+      primary: $fkn-m3-mono,
+      tertiary: $fkn-m3-mono,
+    ),
+    density: (
+      scale: 0,
+    ),
+  )
+);
+$dark-theme: mat.define-theme(
+  (
+    color: (
+      theme-type: dark,
+      // predefined palettes from material website (top right theme option)
+      // primary: mat.$magenta-palette,
+      // tertiary: mat.$violet-palette,
+      primary: $fkn-m3-mono,
+      tertiary: $fkn-m3-mono,
+    ),
+  )
+);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
@@ -132,8 +145,8 @@ $dark-theme: mat.define-theme((color: (theme-type: dark,
 }
 
 @font-face {
-  font-family: 'Nunito-Light';
-  src: url('assets/Nunito-Light.ttf') format('truetype');
+  font-family: "Nunito-Light";
+  src: url("assets/Nunito-Light.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
@@ -157,7 +170,7 @@ $light-text-color: #cacaca;
 
 // Light theme variables
 $light-bg-color: #d2d2d2;
-$semi-light-bg-color: rgba(255,255,255, 255);
+$semi-light-bg-color: rgba(255, 255, 255, 255);
 $dark-text-color: #181818;
 
 ////////////////////////////////////
@@ -175,7 +188,6 @@ $dark-text-color: #181818;
     background: #3b3b3b;
     color: #737373;
     box-shadow: 4px 5px 10px 0 rgb(0 0 0 / 8%);
-
   }
 
   .subject {
@@ -183,10 +195,9 @@ $dark-text-color: #181818;
     box-shadow: 4px 5px 10px 0 rgb(0 0 0 / 8%);
   }
 
-
   .old:not(.new) .subject {
     background: #3b3b3b;
-    color: #737373
+    color: #737373;
   }
 
   .old .date {
@@ -199,7 +210,7 @@ $dark-text-color: #181818;
 
   .old:not(.new) .subject {
     background: #3b3b3b;
-    color: #737373
+    color: #737373;
   }
 
   .old .date {
@@ -245,11 +256,11 @@ $dark-text-color: #181818;
       border-radius: 0 0 10px 10px;
       border: thin solid #414141;
     }
-
   }
 
   // labed color when input is focused
-  .mdc-text-field--filled:not(.mdc-text-field--disabled).mdc-text-field--focused .mdc-floating-label--float-above {
+  .mdc-text-field--filled:not(.mdc-text-field--disabled).mdc-text-field--focused
+    .mdc-floating-label--float-above {
     color: #bebebe;
   }
 
@@ -259,7 +270,8 @@ $dark-text-color: #181818;
   }
 
   // caret color
-  .mdc-text-field--filled:not(.mdc-text-field--disabled) .mdc-text-field__input {
+  .mdc-text-field--filled:not(.mdc-text-field--disabled)
+    .mdc-text-field__input {
     caret-color: #ffffff;
     color: white;
   }
@@ -279,7 +291,8 @@ $dark-text-color: #181818;
   }
 
   // placeholder text color
-  .mat-mdc-form-field:not(.mat-form-field-disabled) .mat-mdc-floating-label.mdc-floating-label {
+  .mat-mdc-form-field:not(.mat-form-field-disabled)
+    .mat-mdc-floating-label.mdc-floating-label {
     color: rgba(169, 169, 169, 0.65);
   }
 
@@ -345,7 +358,6 @@ $dark-text-color: #181818;
     color: lightgrey !important;
     --mat-button-toggle-hover-state-layer-opacity: 0;
   }
-
 
   .mat-button-toggle {
     border-left: unset !important;
@@ -455,8 +467,6 @@ $dark-text-color: #181818;
   }
 }
 
-
-
 ////////////////////////////////////
 //////////////LIGHT MODE////////////
 ////////////////////////////////////
@@ -478,7 +488,7 @@ $dark-text-color: #181818;
 
   .old:not(.new) .subject {
     background: #f6f6f6;
-    color: #b9b9b9
+    color: #b9b9b9;
   }
 
   .old .date {
@@ -509,12 +519,11 @@ $dark-text-color: #181818;
     background: #494949;
   }
 
-
   .emailInput {
     .mdc-text-field--filled:not(.mdc-text-field--disabled) {
       background-color: transparent;
       border-radius: 10px 10px 0 0;
-      border: thin solid #DEDEDEDF;
+      border: thin solid #dedededf;
       border-bottom-style: none;
     }
   }
@@ -523,13 +532,13 @@ $dark-text-color: #181818;
     .mdc-text-field--filled:not(.mdc-text-field--disabled) {
       background-color: transparent;
       border-radius: 0 0 10px 10px;
-      border: thin solid #DEDEDEDF;
+      border: thin solid #dedededf;
     }
-
   }
 
   // labed color when input is focused
-  .mdc-text-field--filled:not(.mdc-text-field--disabled).mdc-text-field--focused .mdc-floating-label--float-above {
+  .mdc-text-field--filled:not(.mdc-text-field--disabled).mdc-text-field--focused
+    .mdc-floating-label--float-above {
     color: #13143166;
   }
 
@@ -539,7 +548,8 @@ $dark-text-color: #181818;
   }
 
   // caret color
-  .mdc-text-field--filled:not(.mdc-text-field--disabled) .mdc-text-field__input {
+  .mdc-text-field--filled:not(.mdc-text-field--disabled)
+    .mdc-text-field__input {
     caret-color: #000000;
   }
 
@@ -550,7 +560,8 @@ $dark-text-color: #181818;
   //  color: #656565;
   //}
   // placeholder text color
-  .mat-mdc-form-field:not(.mat-form-field-disabled) .mat-mdc-floating-label.mdc-floating-label {
+  .mat-mdc-form-field:not(.mat-form-field-disabled)
+    .mat-mdc-floating-label.mdc-floating-label {
     color: rgba(128, 128, 128, 0.8);
   }
 
@@ -637,7 +648,6 @@ $dark-text-color: #181818;
     color: #4b4b4b;
     align-self: center;
     font-size: x-large;
-    padding-left: 0.3rem;
   }
 
   .mat-button-toggle-button {
@@ -694,7 +704,4 @@ $dark-text-color: #181818;
   .cdk-overlay-container {
     background-color: unset;
   }
-
-
-
 }
